--- a/output/template.html
+++ b/output/template.html
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Jbook</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-        <script>hljs.highlightAll();</script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="main-page">
-        <nav>
-            <a href="#1._Introducing_Express">1. Introducing Express</a>,<a href="#2._Getting_Started_with_Node">2. Getting Started with Node</a>,<a href="#3._Saving_Time_with_Express">3. Saving Time with Express</a>,<a href="#4._Tidying_Up">4. Tidying Up</a>,<a href="#5._Quality_Assurance">5. Quality Assurance</a>,<a href="#6._The_Request_and_Response_Objects">6. The Request and Response Objects</a>,<a href="#7._Templating_with_handlebars">7. Templating with handlebars</a>
-        </nav>
-        <section>
-            <h1 id="1._Introducing_Express">1. Introducing Express</h1><p>Express was created by TJ Holowaychuk, a web framework inspired by Sinatra, which is a web framework built on Ruby.</p>
+<h1 class="custom-heading">1. Introducing Express</h1><p>Express was created by TJ Holowaychuk, a web framework inspired by Sinatra, which is a web framework built on Ruby.</p>
 <blockquote>
 <p>Express underwent a fairly substantial rewrite between 2.x and 3.0, then again between 3.x and 4.0. This book will focus on version 4.0.</p>
 </blockquote>
-<h1 id="2._Getting_Started_with_Node">2. Getting Started with Node</h1><ul>
+<h1 class="custom-heading">2. Getting Started with Node</h1><ul>
 <li>Installation guides</li>
 <li>terminal usage for basic file commands</li>
 <li>deciding which editor to use</li>
 </ul>
-<h2 id="Simple_web_server_in_node">Simple web server in node</h2><pre><code class="language-js">var http = require(&quot;http&quot;);
+<h2 class="custom-heading">Simple web server in node</h2><pre><code class="language-js">var http = require(&quot;http&quot;);
 
 http
   .createServer(function (req, res) {
@@ -35,13 +18,13 @@ http
 
 console.log(&quot;Server started on localhost:3000; press Ctrl-C to terminate....&quot;);
 </code></pre>
-<h1 id="3._Saving_Time_with_Express">3. Saving Time with Express</h1><p>In Chapter 2, you learned how to create a simple web server using only Node. In this chapter, we will recreate that server using Express.</p>
+<h1 class="custom-heading">3. Saving Time with Express</h1><p>In Chapter 2, you learned how to create a simple web server using only Node. In this chapter, we will recreate that server using Express.</p>
 <blockquote>
 <p>Take a look at scaffolding utility provided by express</p>
 </blockquote>
-<h2 id="Views_and_Layouts">Views and Layouts</h2><p>a view is what gets delivered to the user. In the case of a website, that usually means HTML, though you could also deliver a PNG or a PDF, or anything that can be rendered by the client. For our purposes, we will consider views to be HTML.</p>
+<h2 class="custom-heading">Views and Layouts</h2><p>a view is what gets delivered to the user. In the case of a website, that usually means HTML, though you could also deliver a PNG or a PDF, or anything that can be rendered by the client. For our purposes, we will consider views to be HTML.</p>
 <p>static is the content that does not need to be changed on the fly like css, image files, js etc</p>
-<h2 id="Using_Handlebars_as_a_template_framework">Using Handlebars as a template framework</h2><pre><code class="language-js">var app = express();
+<h2 class="custom-heading">Using Handlebars as a template framework</h2><pre><code class="language-js">var app = express();
 // set up handlebars view engine
 var handlebars = require(&quot;express3-handlebars&quot;).create({
   defaultLayout: &quot;main&quot;,
@@ -50,7 +33,7 @@ var handlebars = require(&quot;express3-handlebars&quot;).create({
 app.engine(&quot;handlebars&quot;, handlebars.engine);
 app.set(&quot;view engine&quot;, &quot;handlebars&quot;);
 </code></pre>
-<h2 id="File_structure_for_using_Handlebars">File structure for using Handlebars</h2><pre><code>├── app.js
+<h2 class="custom-heading">File structure for using Handlebars</h2><pre><code>├── app.js
 └── views
     ├── 404.handlebars
     ├── 500.handlebars
@@ -75,11 +58,11 @@ app.set(&quot;view engine&quot;, &quot;handlebars&quot;);
 <pre><code class="language-html">views/home.handlebars:
 &lt;h1&gt;Welcome to Meadowlark Travel&lt;/h1&gt;
 </code></pre>
-<h2 id="Static_Files_and_Views">Static Files and Views</h2><p>Static middleware allows you to designate one or more directories as containing static resources that are simply to be delivered to the client without any special handling. This is where you would put things like images, CSS files, and client-side JavaScript files.</p>
+<h2 class="custom-heading">Static Files and Views</h2><p>Static middleware allows you to designate one or more directories as containing static resources that are simply to be delivered to the client without any special handling. This is where you would put things like images, CSS files, and client-side JavaScript files.</p>
 <pre><code class="language-js">app.use(express.static(__dirname + &quot;/public&quot;));
 </code></pre>
 <p>every asset can be stored inside <code>/public</code> dir like images and css files etc</p>
-<h2 id="Dynamic_content">Dynamic content</h2><p>Views aren’t simply a complicated way to deliver static HTML (though they can certainly do that as well). The real power of views is that they can contain dynamic information.</p>
+<h2 class="custom-heading">Dynamic content</h2><p>Views aren’t simply a complicated way to deliver static HTML (though they can certainly do that as well). The real power of views is that they can contain dynamic information.</p>
 <pre><code class="language-html">/views/about.handlebars
 &lt;h1&gt;{{{text}}}&lt;/h1&gt;
 </code></pre>
@@ -87,14 +70,14 @@ app.set(&quot;view engine&quot;, &quot;handlebars&quot;);
   res.render(&quot;about&quot;, { text: &quot;random text&quot; });
 });
 </code></pre>
-<h1 id="4._Tidying_Up">4. Tidying Up</h1><p>Best Practices</p>
+<h1 class="custom-heading">4. Tidying Up</h1><p>Best Practices</p>
 <ul>
 <li>Version control</li>
 <li>npm packages</li>
 <li>module exports</li>
 </ul>
-<h1 id="5._Quality_Assurance">5. Quality Assurance</h1><p>Stupid shit</p>
-<h1 id="6._The_Request_and_Response_Objects">6. The Request and Response Objects</h1><p><a href="https://localhost:3000/about?test=1#history">text</a></p>
+<h1 class="custom-heading">5. Quality Assurance</h1><p>Stupid shit</p>
+<h1 class="custom-heading">6. The Request and Response Objects</h1><p><a href="https://localhost:3000/about?test=1#history">text</a></p>
 <pre><code>http:// -&gt; protocol
 localhost -&gt; hostname
 :30 -&gt; port name
@@ -102,14 +85,14 @@ localhost -&gt; hostname
 ?test=1 -&gt; querystring
 #history -&gt; fragment
 </code></pre>
-<h2 id="Response_Headers">Response Headers</h2><p>Browsers will respect the Content-Type header regardless of what the URL path is. So you could serve HTML from a path of /image.jpg or an image from a path of /text.html. (There’s no legitimate reason to do this; it’s just important to understand that paths are abstract, and the browser uses Content-Type to determine how to render content.)</p>
+<h2 class="custom-heading">Response Headers</h2><p>Browsers will respect the Content-Type header regardless of what the URL path is. So you could serve HTML from a path of /image.jpg or an image from a path of /text.html. (There’s no legitimate reason to do this; it’s just important to understand that paths are abstract, and the browser uses Content-Type to determine how to render content.)</p>
 <p>It is also common for response headers to contain some information about the server, indicating what type of server it is, and sometimes even details about the operating system. The downside about returning server information is that it gives hackers a starting point to compromise your site. Extremely security- conscious servers often omit this information, or even provide false information. Disabling Express’s default X-Powered-By header is easy:</p>
 <pre><code class="language-js">app.disable(&quot;x-powered-by&quot;);
 </code></pre>
-<h2 id="Request_Body">Request Body</h2><p>In addition to the request headers, a request can have a body (just like the body of a response is the actual content that’s being returned). Normal GET requests don’t have bodies, but POST requests usually do. The most common media type for POST bodies is <code>application/x-www-form-urlencoded</code>, which is simply encoded name/value pairs separated by ampersands (essentially the same format as a querystring). If the POST needs to support file uploads, the media type is <code>multipart/form-data</code>, which is a more zomplicated format. Lastly, AJAX requests can use <code>application/json</code> for the body.</p>
-<h2 id="Parameters">Parameters</h2><p>The term &quot;parameters&quot; in web requests can refer to various sources like query strings, session data, request bodies, or named routing parameters, leading to confusion when they overlap. The param method in Node.js merges all these parameters, which can create bugs when conflicting values arise. This practice, influenced by PHP&#39;s $_REQUEST variable, is discouraged. Instead, the author advocates for using dedicated properties for each parameter type to avoid confusion.</p>
-<h2 id="Boiling_It_Down">Boiling It Down</h2><p>The chances are that you will be using a small subset of this functionality most of the time. So let’s break it down by functionality you’ll be using most frequently.</p>
-<h2 id="Rendering_Content">Rendering Content</h2><p>Example 6-1. Basic usage</p>
+<h2 class="custom-heading">Request Body</h2><p>In addition to the request headers, a request can have a body (just like the body of a response is the actual content that’s being returned). Normal GET requests don’t have bodies, but POST requests usually do. The most common media type for POST bodies is <code>application/x-www-form-urlencoded</code>, which is simply encoded name/value pairs separated by ampersands (essentially the same format as a querystring). If the POST needs to support file uploads, the media type is <code>multipart/form-data</code>, which is a more zomplicated format. Lastly, AJAX requests can use <code>application/json</code> for the body.</p>
+<h2 class="custom-heading">Parameters</h2><p>The term &quot;parameters&quot; in web requests can refer to various sources like query strings, session data, request bodies, or named routing parameters, leading to confusion when they overlap. The param method in Node.js merges all these parameters, which can create bugs when conflicting values arise. This practice, influenced by PHP&#39;s $_REQUEST variable, is discouraged. Instead, the author advocates for using dedicated properties for each parameter type to avoid confusion.</p>
+<h2 class="custom-heading">Boiling It Down</h2><p>The chances are that you will be using a small subset of this functionality most of the time. So let’s break it down by functionality you’ll be using most frequently.</p>
+<h2 class="custom-heading">Rendering Content</h2><p>Example 6-1. Basic usage</p>
 <pre><code class="language-js">// basic usage
 app.get(&quot;/about&quot;, function (req, res) {
   res.render(&quot;about&quot;);
@@ -171,7 +154,7 @@ app.use(function (req, res) {
   res.status(404).render(&quot;not-found&quot;);
 });
 </code></pre>
-<h2 id="Form_Processing">Form Processing</h2><p>Example 6-9. Basic form processing</p>
+<h2 class="custom-heading">Form Processing</h2><p>Example 6-9. Basic form processing</p>
 <pre><code class="language-js">// body-parser middleware must be linked in
 app.post(&quot;/process-contact&quot;, function (req, res) {
   console.log(
@@ -199,15 +182,10 @@ app.post(&quot;/process-contact&quot;, function (req, res) {
   }
 });
 </code></pre>
-<h2 id="Providing_an_API">Providing an API</h2><p>WIP</p>
-<h1 id="7._Templating_with_handlebars">7. Templating with handlebars</h1><ul>
+<h2 class="custom-heading">Providing an API</h2><p>WIP</p>
+<h1 class="custom-heading">7. Templating with handlebars</h1><ul>
 <li>demo0</li>
 <li>demo1 </li>
 <li>demo2</li>
 <li>demo2</li>
 </ul>
-
-        </section>    
-    </div>
-</body>
-</html>
