--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main-page">
         <nav>
-
+            {{{nav}}}
         </nav>
         <section>
             {{{index}}}
