feat: nav styling

--- a/output/index.html
+++ b/output/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main-page">
         <nav>
-            <a href="#1._Introducing_Express">1. Introducing Express</a> <a href="#2._Getting_Started_with_Node">2. Getting Started with Node</a> <a href="#3._Saving_Time_with_Express">3. Saving Time with Express</a> <a href="#4._Tidying_Up">4. Tidying Up</a> <a href="#5._Quality_Assurance">5. Quality Assurance</a> <a href="#6._The_Request_and_Response_Objects">6. The Request and Response Objects</a> <a href="#7._Templating_with_handlebars">7. Templating with handlebars</a>
+            <a href="#1._Introducing_Express">1. Introducing Express</a> <a href="#2._Getting_Started_with_Node">2. Getting Started with Node</a> <a href="#3._Saving_Time_with_Express">3. Saving Time with Express</a> <a href="#4._Tidying_Up">4. Tidying Up</a> <a href="#5._Quality_Assurance">5. Quality Assurance</a> <a href="#6._The_Request_and_Response_Objects">6. The Request and Response Objects</a> <a href="#7._Templating_with_handlebars">7. Templating with handlebars</a> <a href="#8._hello_peshalll">8. hello peshalll</a>
         </nav>
         <section>
             <h1 id="1._Introducing_Express">1. Introducing Express</h1><p>Express was created by TJ Holowaychuk, a web framework inspired by Sinatra, which is a web framework built on Ruby.</p>
@@ -206,7 +206,7 @@ app.post(&quot;/process-contact&quot;, function (req, res) {
 <li>demo2</li>
 <li>demo2</li>
 </ul>
-
+<h1 id="8._hello_peshalll">8. hello peshalll</h1>
         </section>    
     </div>
 </body>
