--- a/template.html
+++ b/template.html
@@ -12,10 +12,16 @@
 <body>
     <div class="main-page">
         <nav>
+        
             {{{nav}}}
         </nav>
-        <section>
-            {{{index}}}
+        <section>        
+            <div class="header">
+            </div>
+
+            <div class="page">
+                {{{index}}}
+            </div>
         </section>    
     </div>
 </body>
