build: output, header update

--- a/template.html
+++ b/template.html
@@ -17,6 +17,9 @@
         </nav>
         <section>        
             <div class="header">
+                <button class="close"><img src="hamburger.png" alt="" srcset=""></button>
+                <p>Jbook</p>
+                <button class="github">G</button>
             </div>
 
             <div class="page">
